samples/_failures_safe/1761002180_5ba754_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_afc5fe73.c: In function ‘main’:
./samples/SAFE/__tmp_afc5fe73.c:159:20: error: missing terminating " character
  159 |             printf("Negative weights not
      |                    ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_afc5fe73.c:159:13: error: expected expression at end of input
  159 |             printf("Negative weights not
      |             ^~~~~~
./samples/SAFE/__tmp_afc5fe73.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_afc5fe73.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_afc5fe73.c:159:13: error: expected declaration or statement at end of input
